implemented linear and binary search